methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:9: error: not found: value estFAceMur
if( estFAceMur()){
    ^SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
  gauche();avance();
                 ^