methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  avance();
if (getCouleurSol()==Color.green){
  return(true)
}else{
  return false
}
if( estFAceMur()){
  return(false)
                 }else{
  gauche();avance();
}
}